--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-"token": "Token",
-"id": "Acount Id",
+"token": "OTg2MDI0ODY4Mzk3MDgwNjY4.G24Fht.suspvv2iIdlmjaBlj8KgeEyydOL58tHmmJibaQ",
+"id": "986024868397080668",
 "stats": "STREAMING",
-"text": "lera shtakan bnusa ba dle xhot",
-"text2": "lerash ba haman shewa",
-"idvc": "Vc id" 
+"text": "JanO Dev",
+"text2": "JanO ²",
+"idvc": "1005369206390411346" 
 }
