--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-"token": "OTg2MDI0ODY4Mzk3MDgwNjY4.G24Fht.suspvv2iIdlmjaBlj8KgeEyydOL58tHmmJibaQ",
+"token": "OTg2MDI0ODY4Mzk3MDgwNjY4.GGFBF4._X6bBfHyPb40yN2FzqWBU7k91DHjxROvAVRhdQ",
 "id": "986024868397080668",
 "stats": "STREAMING",
 "text": "JanO Dev",
